Fixed: Wrong color of the placeholder of the pinned tab.

--- a/src/styles/themes/default/pinned-tab.styl
+++ b/src/styles/themes/default/pinned-tab.styl
@@ -85,7 +85,7 @@
     box(absolute)
     size(100%, same)
     pos(0, 0)
-    fill: var(--favicons-placehoder-bg)
+    fill: var(--favicons-placeholder-bg)
 
 .PinnedTab[data-updated] .placeholder
   mask: radial-gradient(
